# Pratica

./: README.md
C#/AvaliadorDeBanda/: AvaliadorDeBanda.sln
C#/AvaliadorDeBanda/AvaliadorDeBanda/: Avaliacao.cs  Banda.cs  Program.cs
C#/CalculadoraSimples/: CalculadoraSimples.sln
C#/CalculadoraSimples/Calculadora/: Program.cs
C#/ConexaoCodeFirst/: ConexaoCodeFirst.sln
C#/ConexaoCodeFirst/ConexaoCodeFirst/: ConexaoCodeFirst.csproj  ConexaoCodeFirst.http  Configuration.cs  Program.cs  appsettings.json
C#/EstruturaDeDados/: EstruturaDeDados.sln
C#/EstruturaDeDados/EstruturaDeDados/: Program.cs
C#/Jwt/: Jwt.sln
C#/Jwt/Jwt/: Configuration.cs  Jwt.csproj  (+2 more)
C#/PessoalSimpless/: PessoalSimpless.sln  entendimento.md
C#/PraticaDeConexao/: PraticaDeConexao.sln
front_end/lista_tarefas/: index.html
js/API-HTTP/: http.js  page1.html
js/promises/: index.html  promise.js
python/Requests/: main.py
python/SQlAlchemy_do_zero/: entendimento.md
python/SQlAlchemy_do_zero/zero_sqlalchemy/: pyproject.toml
python/SQlAlchemy_do_zero/zero_sqlalchemy/zero_sqlalchemy/: __init__.py  exemplo01.py  exemplo02.py  exemplo03.py
python/__magia__/: main.py
python/criando_api/: main.py
python/fastapi/: main.py
python/fastapi-do-zero/: entedimento.txt
python/introducao_pytest/: entendimentos.txt
python/introducao_pytest/pytest_zero/: pyproject.toml  report.xml  report_1.xml  teste.xml
python/introducao_pytest/pytest_zero/pytest_zero/: jogo.py
python/introducao_pytest/pytest_zero/tests/: test_pytest.py
python/migracoes/: alembic.ini  models.py  passos.md
(+64 files in other folders)
