[tool.poetry]
name = "zero-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["humbertoluis22 <humbertoluis2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
