[tool.poetry]
name = "pytest-zero"
version = "0.1.0"
description = ""
authors = ["humbertoluis22 <humbertoluis2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
ruff = "^0.8.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
